# python_testing_learning

./: .gitignore  .gitingnore  README.md  notes  notes.md  notes.txt  pyproject.toml
program/: formatting_name.py  longest_and_shortest_word.py  my_sum.py
pytest_learning/: item_database.py  shopping_cart.py  test_shopping_cart.py
tests/: test_ch1.py  test_my_sum.py
tests/integration/: test_integration.py
tests/unit/: test_ch2.py  test_formating_name.py  test_longest_and_shortest_word.py  test_my_sum.py  test_sum.py
