[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"
selenium = "^4.9.1"
webdriver-manager = "^3.8.6"
nose2 = "^0.13.0"
tox = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
